* Refactoring of TCP code in preparation for IPv6/SSL support
* Remove obsolete "meta" message support
* Attempt to get a more accurate clock delta when a client message has been
  sent through a xymonproxy
* xymonlaunch: Add support for specifying a PIDFILE in tasks.cfg or 
  clientlaunch.cfg
* xymonlaunch: Add SENDHUP support for optionally passing along signals 
  to running
* Support and display "TEXT=Human readable" tags for LOG entries in 
  analysis.cfg on msgs
* A 'proxyping' command has been added for checking that a xymonproxy 
  server itself is up
* Recipients of 'RECOVERED' alert messages will now also receive 
  them if the host/service has been dropped or the alert became stale
  (recovered while xymond_alert was not running), not just if the
  test has been disabled.
* xymond_channel can now send to multiple local workers at once, and/or
  rotate message submission to multiple copies of local workers with the
  --multilocal and/or --multirun options.
* xymond_channel can wait for a configurable amount of time after launching
  a worker before sending it messages, to give it time to initialize.
* xymond_channel will now attempt to finish sending any messages that 
  are still pending for workers before it exits.
* xymond_channel will now pass the channel it's connected to onto its
  workers via the XYMOND_CHANNELNAME environment variable. xymond_filestore
  and xymond_capture will now use this value if no options are given.

* FIXME-doc: Add --no-cookies and --no-save-cookies (read but don't 
  write) to xymonnet
* FIXME-doc: Add hidden tunables for controlling flushing to the external 
  RRD processor. Set RRD_EXTPROC_DOFLUSH to flush after every processed 
  message (which could be multiple lines). Set RRD_EXTPROC_BUFSIZ to 
  control buffer size (similar to BUFSIZ)
* FIXME-doc: Experimental support for rrdcached (requires rrdtoool 1.5 
  or higher) (Thanks, Martin Sperl)
* FIXME-doc: xymond_rrd: Add --flushtimeout option and reduce the 