@@ -11,6 +11,10 @@ Changes from 4.3.x -> 4.4-alpha
   clientlaunch.cfg
 * xymonlaunch: Add SENDHUP support for optionally passing along signals 
   to running
+* xymonlaunch: Add DELAY keyword for delaying initial task startup
+* xymonlaunch: Add FAILDELAY keyword for configuring backoff period
+  after too many (5) non-zero exit errors. Failure count is also 
+  cleared after this period passes without issue.
 * Support and display "TEXT=Human readable" tags for LOG entries in 
   analysis.cfg on msgs
 * A 'proxyping' command has been added for checking that a xymonproxy 
